2012-07-20 Shawn Chin <shawn.chin@_NOSPAM_stfc.ac.uk>
	* src/*: Added MB_SearchTree_*() routines to store contents of a board
	  which a k-d tree. This allows fast filtering by parameter ranges.
	  The implementation allows k-d trees of arbitrary dimensions, but
	  for now we only expose 2D and 3D variants in the public API.

	* include/khash.h: Upgraded khash.h to version 0.2.6

2012-07-02 Shawn Chin <shawn.chin@_NOSPAM_stfc.ac.uk>

	* src/parallel/env_init.c: srand() now only called in production
	  mode and not in debug (which is what was meant to happen).

	* src/utils/pooled_list.c: Fixed bug in iterator randomisation. There were
	  cases where the index used to calculate offsets could overflow which 
	  would lead to out-of-bounds memory access.

	* src/serial/env_init.c, src/parallel/env_init.c: Output banner now
	  suppressed in production runs.

	* : Tagged as 0.2.2

2009-10-01 Lee-Shawn Chin <shawn.chin@_NOSPAM_stfc.ac.uk>

	* include/mb_settings.h, src/utils/settings.c: libmboard can now 
	  read configuration settings from environment variables
	* :MBOARD_MEMPOOL_RECYCLE env var can be set to allow message 
	  boards to recycle allocated memory. (default: disabled)
	* :MBOARD_MEMPOOL_BLOCKSIZE env var can be set to change the block
	  size of memory pools. (default: 512 messages)
	* :MBOARD_COMM_PROTOCOL env var can be set to change the communication
	  protocol used for board syncs. (default: HANDSHAKE)
	  
	* configure.ac, src/parallel/*.c: renamed --enable-developer config
	  option to --enable-unsafe-checks. 
	  
	* src/*/setaccessmode.c: MB_SetAccessMode() routine added to set
	  access mode of board. 
	* src/*/setsyncpattern.c: MB_SetSyncPattern() routine added to fine tune
	  synchronisation pattern of board.

	* src/parallel/comm*: New communication protocol implemented to make
	  use of board access modes and sync patterns to allow better communication
	  overlap and reduce lock-stepping of processors.
	  