@@ -13,11 +13,7 @@ MBIt_objmap* create_om_obj(void) {
     MBIt_objmap *mymap = NULL;
     
     mymap = MBI_objmap_new();
-    
     CU_ASSERT_PTR_NOT_NULL_FATAL(mymap);
-    /* CU_ASSERT_PTR_NULL_FATAL(mymap->map); */
-    CU_ASSERT_EQUAL(mymap->top, 0);
-    
     return mymap;
 }
 
