@@ -6,6 +6,9 @@
 
 	* include/khash.h: Upgraded khash.h to version 0.2.6
 
+	* src/utils/objmap.c: Simplified the objmap module. Direct mapping
+	  and key recycling (experimental) no longer included.
+
 2012-07-02 Shawn Chin <shawn.chin@_NOSPAM_stfc.ac.uk>
 
 	* src/parallel/env_init.c: srand() now only called in production
